<resources>
    <string name="app_name">区块财经</string>
    <string name="download_fail">下载失败</string>
    <string name="check_new_version">发现了新版本</string>
    <string name="downloading">正在下载: %1$s</string>
    <string name="download_start">开始下载</string>
    <string name="please_not_download_again">请勿重复下载</string>
    <string name="download_complete">下载完成</string>
    <string name="now_update">立即更新</string>
    <string name="version">v%1$s</string>
    <string name="is_already_latest_version">已经是最新版本了</string>
    <string name="restart_app">重启应用</string>
    <string name="cut">剪切</string>
    <string name="save_to_the_gallery">是否保存到相册</string>
    <string name="image_save_to_">图片保存至%1$s</string>
    <string name="image_save_fail">图片保存失败</string>
    <string name="is_sure_delete_photo">要删除这张照片吗?</string>
    <string name="download_app">扫码下载  区块财经APP</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="sina_weibo">微博</string>
    <string name="share_succeed">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="you_not_install_weixin">您尚未安装微信</string>
    <string name="you_not_install_weibo">您尚未安装微博</string>
    <string name="you_not_install_qq">您尚未安装QQ</string>
    <string name="share_to">分享至</string>
    <string name="share_to_">分享至:</string>
    <string name="share">分享</string>
    <string name="ok">确定</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="check_your_net">加载失败，请检查网络后重试</string>
    <string name="network_error_please_reload">网络连接失败 请重新加载</string>
    <string name="refresh">刷新</string>
    <string name="android_web_agent">ANDROID_AGENT</string>
    <string name="save_image">保存图片</string>
    <string name="save_qrcode_to">图片保存至%1$s</string>
    <string name="save_qrcode_failure">图片保存失败</string>
    <string name="take_phone_from_camera">拍照</string>
    <string name="look_big_picture">查看大图</string>
    <string name="take_phone_from_phone">从手机相册选择</string>
    <string name="take_phone_cancel">取消</string>
    <string name="sd_is_not_useful">sd卡不可使用</string>
    <string name="please_open_camera_permission">请打开相机权限</string>
    <string name="http_error_null">空数据异常</string>
    <string name="http_error_timeout">网络请求超时</string>
    <string name="http_error_network">网络异常</string>
    <string name="http_error_parse">数据解析异常</string>
    <string name="http_error_server">服务器有事出去一会儿稍等一下,马上回来</string>
    <string name="news">资讯</string>
    <string name="news_flash">快讯</string>
    <string name="market">行情</string>
    <string name="mine">我的</string>
    <string-array name="tabTexts">
        <item>@string/news</item>
        <item>@string/news_flash</item>
        <item>@string/market</item>
        <item>@string/mine</item>
    </string-array>
    <string name="share_news_flash">分享快讯</string>
    <string name="week_">星期%1$s</string>
    <string name="save_success">保存成功</string>
    <string name="news_detail">资讯详情</string>
    <string name="praise_count">赞(%1$d)</string>
    <string name="news_praise">赞</string>
    <string name="praise_error">点赞失败</string>
    <string name="reader_time">约%1$d分钟</string>
    <string name="original">原创</string>
    <string name="i_have_a_bottom_line">我是有底线的</string>
    <string name="no_more_data">没有更多内容了</string>
    <string name="no_more_new_news">已是最新资讯</string>
    <string name="channel_custom">频道定制</string>
    <string name="channel_select">已选频道</string>
    <string name="drag_to_select_channel">长按拖动调整排序</string>
    <string name="un_select_channel">未选频道</string>
    <string name="other_article">相关文章</string>
    <string name="collect_fail">收藏失败</string>
    <string name="no_news">暂无资讯，换个频道试试吧</string>
    <string name="no_other_news">暂无相关资讯</string>
    <string name="no_main_news">暂无资讯</string>
    <string name="collect_success">已收藏</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="no_more_article">我是有底线的</string>
    <string name="market_volume">量%1$s</string>
    <string name="volume">交易量</string>
    <string name="market_value">市值</string>
    <string name="highest">最高</string>
    <string name="lowest">最低</string>
    <string name="ask_price_1">买一</string>
    <string name="bid_price_1">卖一</string>
    <string name="trend_chart">分时图</string>
    <string name="day_k_line">日K</string>
    <string name="five_min_k">5分</string>
    <string name="fifteen_min_k">15分</string>
    <string name="thirty_min_k">30分</string>
    <string name="sixty_min_k">60分</string>
    <string name="there_is_no_more_data">没有更多数据了</string>
    <string name="check_related_news">查看相关资讯</string>
    <string name="open_">开:%1$s</string>
    <string name="highest_">高:%1$s</string>
    <string name="lowest_">低:%1$s</string>
    <string name="close_">收:%1$s</string>
    <string name="share_market">分享行情</string>
    <string name="real_time_market">实时行情</string>
    <string name="connect_world_with_news">用资讯链接世界！</string>
    <string name="now_refresh">立即刷新</string>
    <string name="auth_code_login">验证码登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="login_agree">登录即同意</string>
    <string name="bcnews_agreement">《区块财经用户协议》</string>
    <string name="phone_number">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="input_auth_code">输入验证码</string>
    <string name="input_tel">输入手机号</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="fast_login">快速登录</string>
    <string name="login_success">登录成功</string>
    <string name="cancel_login">取消登录</string>
    <string name="cancel_bind">取消绑定</string>
    <string name="auth_code_had_sent_">验证码已发送至%1$s</string>
    <string name="reset_password_success">重设密码成功，请重新登录</string>
    <string name="_seconds">(%1$d)重新获取</string>
    <string name="obtain_auth_code_continue">重新获取</string>
    <string name="login_ing">登录中</string>
    <string name="bind_phone">关联手机号</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="tel_pass_login">手机号密码登录</string>
    <string name="tel_auth_code_login">手机号验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="input_pass">输入密码</string>
    <string name="now_register">立即注册</string>
    <string name="agree_tip">我已阅读并同意</string>
    <string name="login_pass">登录密码</string>
    <string name="forget_pass_1">忘记密码(1/2)</string>
    <string name="forget_pass_2">忘记密码(2/2)</string>
    <string name="next">下一步</string>
    <string name="modify_pass">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="set_login_password">设置密码</string>
    <string name="set_login_password_again">再次输入密码</string>
    <string name="set_success">设置成功</string>
    <string name="please_input_image_auth_code">请输入图形验证码</string>
    <string name="auth_code_error">图形验证码有误</string>
    <string name="image_auth_code">图形验证码</string>
    <string name="change_image_auth_code">看不清？</string>
    <string name="change_image">换一张</string>
    <string name="company_info">浙江松柏信息技术有限公司\nCopyright@2017</string>
    <string name="bcnews_user_agreement">《区块财经用户协议》</string>
    <string name="cooperation_click_copy">商务合作(点击复制)</string>
    <string name="version_">V%1$s</string>
    <string name="copy_success">复制成功</string>
    <string name="bcnews_team">区块财经团队</string>
    <string name="expect_your_feedback">期待您的反馈</string>
    <string name="send">发送</string>
    <string name="gallery">相册</string>
    <string name="preview">预览</string>
    <string name="all_image">所有图片</string>
    <string name="author_workbench">作者工作台</string>
    <string name="feed_back">意见反馈</string>
    <string name="setting">设置</string>
    <string name="click_login">点击登录</string>
    <string name="collect">收藏</string>
    <string name="history">历史</string>
    <string name="please_add_us_wechat_account">请添加我们的微信号%1$s\n我们坐下来慢慢详谈</string>
    <string name="copy_us_wechat_account">复制微信号</string>
    <string name="message">消息</string>
    <string name="comment">评论</string>
    <string name="receive_new_notification">接收新消息通知</string>
    <string name="personal_data">个人资料</string>
    <string name="account_manager">账号管理</string>
    <string name="about_bcnews">关于区块财经</string>
    <string name="logout">退出</string>
    <string name="weChat_account">微信号</string>
    <string name="affirm_logout">确定要退出登录吗</string>
    <string name="read_history">阅读历史</string>
    <string name="related_news">相关资讯</string>
    <string name="my_collect">我的收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="sure_delete_this_content">确定要删掉该条内容吗</string>
    <string name="head_portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="location">地区</string>
    <string name="personal_introduce">个人简介</string>
    <string name="please_select">请选择</string>
    <string name="please_set_introduce">请设置个人简介</string>
    <string name="thirty">30</string>
    <string name="please_input_introduce">让别人瞻仰下不凡的你吧</string>
    <string name="save">保存</string>
    <string name="introduce_is_too_more">简介太丰富了</string>
    <string name="introduce">简介</string>
    <string name="set_nick_name">设置昵称</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="update_success">修改成功</string>
    <string name="send_message_connect">您好，欢迎反馈！反馈时附上界面截屏，可以更好地给我们反馈问题哦~</string>
    <string name="modify_success">修改成功</string>
    <string name="old_new_pass_not_true">两次密码输入不一致</string>
    <string name="have_good_article_how_to_tell_you">有优质的内容\n怎么第一时间告诉你呢</string>
    <string name="now_notify_me">马上通知我</string>
    <string name="feedback_question">反馈问题</string>
    <string name="input_text_is_more_rich">简介太丰富了</string>
    <string name="use_wechat_portrait_and_name">是否使用微信的头像和昵称？</string>
    <string name="this_account_forbid_login">该账号被禁止登录</string>
    <string name="conversion">兑换</string>
    <string name="digital_currency">数字货币</string>
    <string name="ali_pay">支付宝</string>
    <string name="telephone_charge">话费</string>
    <string name="conversion_detail">兑换明细</string>
    <string name="no_conversion_goods">暂无可兑换商品</string>
    <string name="mention_address">提币地址: 已绑定</string>
    <string name="click_modify">点击修改</string>
    <string name="recharge">兑换</string>
    <string name="all_read">全部已读</string>
    <string name="not_data">暂无数据</string>
    <string name="not_message">暂无消息</string>
    <string name="night_mode">夜间模式</string>
    <string name="notificationManage">推送管理</string>
    <string name="recommend_to_friend">推荐给朋友</string>
    <string name="comment_on_reply">评论有回复</string>
    <string name="praise">赞</string>
    <string name="reply_mine">回复我的</string>
    <string name="mine_review">我评论的</string>
    <string name="gate">gate.io</string>
    <string name="huo_bi">火币</string>
    <string name="bi_an">币安</string>
    <string name="copy_link">复制链接</string>
    <string name="whistle_blowing">举报</string>
    <string name="whistle_blowing_success">举报成功</string>
    <string name="whistle_blowing_success_add_qkc">举报成功，奖励+%1$d算力</string>
    <string name="please_choose_whistle_blowing">请选择举报理由</string>
    <string name="write_comment">写评论...</string>
    <string name="all_point">各方观点</string>
    <string name="all_point_number">全部%1$s条评论</string>
    <string name="all_comment">全部评论</string>
    <string name="praise_count_">%1$d赞</string>
    <string name="look_detail">查看明细</string>
    <string name="time">时间</string>
    <string name="type">类型</string>
    <string name="money">金额</string>
    <string name="digital_coin_conversion">数字货币兑换</string>
    <string name="conversion_result_tip">兑换申请已提交，请耐心等待客服审核。</string>
    <string name="sure_not_attention_person">确定不再关注此人？</string>
</resources>