<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_F5F5"
    tools:context="com.sbai.bcnews.activity.mine.SettingActivity">

    <com.sbai.bcnews.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="@string/setting"/>

    <LinearLayout
        android:id="@+id/nightOrLightModeLL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/night_mode"
            android:textColor="@color/text_222"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/nightOrLightModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_switch"/>
    </LinearLayout>


    <com.sbai.bcnews.view.IconTextRow
        android:id="@+id/notificationManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:layout_constraintTop_toBottomOf="@+id/nightOrLightModeLL"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/notificationManage"
        app:splitLineColor="@color/bg_F5F5"/>

    <com.sbai.bcnews.view.IconTextRow
        android:id="@+id/accountManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:layout_constraintTop_toBottomOf="@+id/notificationManage"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/account_manager"
        app:splitLineColor="@color/bg_F5F5"/>

    <com.sbai.bcnews.view.IconTextRow
        android:id="@+id/aboutBcnews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:layout_constraintTop_toBottomOf="@+id/accountManager"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/about_bcnews"
        app:splitLineColor="@color/bg_F5F5"/>

    <com.sbai.bcnews.view.IconTextRow
        android:id="@+id/recommendToFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        app:hasBottomSplitLine="true"
        app:layout_constraintTop_toBottomOf="@+id/aboutBcnews"
        app:rightIcon="@drawable/ic_common_right_arrow"
        app:rowText="@string/recommend_to_friend"
        app:splitLineColor="@color/bg_F5F5"/>


    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_white"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/text_222"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/recommendToFriend"/>
</android.support.constraint.ConstraintLayout>
