<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:orientation="vertical">

    <com.sbai.bcnews.view.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backFeature="true"
        app:titleText="@string/forget_pass_2"
        app:titleTextColor="@color/text_222"
        app:titleTextSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_title_shadow"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:text="@string/forget_pass"
            android:textColor="@color/text_222"
            android:textSize="30sp"/>

        <LinearLayout
            android:id="@+id/authCodeArea"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/authCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/auth_code"
                android:background="@null"
                android:inputType="number"
                android:maxLength="10"
                android:textColorHint="@color/text_cb"
                android:textSize="15sp"
                android:textColor="@color/text_222"/>

            <TextView
                android:id="@+id/getAuthCode"
                android:layout_width="90dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/get_auth_code"
                android:textColor="@color/primary_or_unlucky_text_color"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="3dp"
            android:background="@color/split"/>

        <com.sbai.bcnews.view.PasswordEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:visibility="visible"
            app:maxCharNum="18"
            app:textHint="@string/login_pass"
            app:hintColor="@color/text_cb"
            app:editColor="@color/text_222"
            app:editSize="15sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginTop="3dp"
            android:background="@color/split"/>

        <TextView
            android:id="@+id/complete"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/btn_yellow_small_rounded"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>