<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/bg_conversion"
        android:orientation="vertical">

        <TextView
            android:id="@+id/conversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/conversion"
            android:textColor="@color/text"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/digitalCurrency"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_conversion_category"
                android:gravity="center"
                android:text="@string/digital_currency"
                android:textColor="@color/text97"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/aliPay"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_conversion_category"
                android:gravity="center"
                android:text="@string/ali_pay"
                android:textColor="@color/text97"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/telephoneCharge"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_conversion_category"
                android:gravity="center"
                android:text="@string/telephone_charge"
                android:textColor="@color/text97"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/conversionDetail"
                android:layout_width="70dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_conversion_category"
                android:gravity="center"
                android:text="@string/conversion_detail"
                android:textColor="@color/text97"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <com.sbai.bcnews.view.ScrollableViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/bg_conversion_bottom">

            <TextView
                android:id="@+id/mentionCoinAddress"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/mention_address"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/modifyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mentionCoinAddress"
                android:layout_marginLeft="18dp"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/click_modify"
                android:textColor="@color/text97"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/rechargeBtn"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="22dp"
                android:background="@drawable/btn_gradient_primary"
                android:gravity="center"
                android:text="@string/recharge"
                android:textColor="@color/text"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>