<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0.5dp"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <View
        android:id="@+id/split"
        android:layout_width="match_parent"
        android:layout_height="11dp"
        android:background="@color/bg_F5F5"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:minHeight="44dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/split"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/text_999"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@color/text_999"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/money"
            android:textColor="@color/text_999"/>
    </LinearLayout>


</RelativeLayout>